@@ -87,7 +87,7 @@ class tx_oelib_headerProxyFactory {
 		if (!is_object($this->headerProxy)
 			|| (get_class($this->headerProxy) != $className)
 		) {
-			$this->headerProxy = t3lib_div::makeInstance($className);
+			$this->headerProxy = tx_oelib_ObjectFactory::make($className);
 		}
 
 		return $this->headerProxy;
