@@ -1,4 +1,5 @@
 0.6.1 - currently working on
+- [#3080] Feature: Add an object factory
 - [#3068] Fix: Value of $functionName not quoted in the data mapper
 - [#2973] Fix: tx_oelib_List::purgeCurrent is not applicable within foreach loops 
 
